--- a/debian/dkms.conf.in
+++ b/debian/dkms.conf.in
@@ -13,10 +13,10 @@ BUILT_MODULE_NAME[0]="ipu-bridge"
 BUILT_MODULE_LOCATION[0]="atomisp/$(echo $kernelver | sed 's/\([0-9]\+\.[0-9]\+\)\..*/\1/g')/drivers/media/pci/intel"
 BUILT_MODULE_NAME[1]="ipu3-cio2"
 BUILT_MODULE_LOCATION[1]="atomisp/$(echo $kernelver | sed 's/\([0-9]\+\.[0-9]\+\)\..*/\1/g')/drivers/media/pci/intel/ipu3"
-BUILT_MODULE_NAME[2]="ivsc-ace"
-BUILT_MODULE_LOCATION[2]="atomisp/$(echo $kernelver | sed 's/\([0-9]\+\.[0-9]\+\)\..*/\1/g')/drivers/media/pci/intel/ivsc"
-BUILT_MODULE_NAME[3]="ivsc-csi"
-BUILT_MODULE_LOCATION[3]="atomisp/$(echo $kernelver | sed 's/\([0-9]\+\.[0-9]\+\)\..*/\1/g')/drivers/media/pci/intel/ivsc"
+BUILT_MODULE_NAME[2]="intel-ipu6"
+BUILT_MODULE_LOCATION[2]="atomisp/$(echo $kernelver | sed 's/\([0-9]\+\.[0-9]\+\)\..*/\1/g')/drivers/media/pci/intel/ipu6"
+BUILT_MODULE_NAME[3]="intel-ipu6-isys"
+BUILT_MODULE_LOCATION[3]="atomisp/$(echo $kernelver | sed 's/\([0-9]\+\.[0-9]\+\)\..*/\1/g')/drivers/media/pci/intel/ipu6"
 ## Intel Atom ISP drivers
 BUILT_MODULE_NAME[4]="atomisp"
 BUILT_MODULE_LOCATION[4]="atomisp/$(echo $kernelver | sed 's/\([0-9]\+\.[0-9]\+\)\..*/\1/g')/drivers/staging/media/atomisp"
@@ -24,16 +24,14 @@ BUILT_MODULE_NAME[5]="atomisp_gmin_platform"
 BUILT_MODULE_LOCATION[5]="atomisp/$(echo $kernelver | sed 's/\([0-9]\+\.[0-9]\+\)\..*/\1/g')/drivers/staging/media/atomisp/pci"
 BUILT_MODULE_NAME[6]="atomisp-gc0310"
 BUILT_MODULE_LOCATION[6]="atomisp/$(echo $kernelver | sed 's/\([0-9]\+\.[0-9]\+\)\..*/\1/g')/drivers/staging/media/atomisp/i2c"
-BUILT_MODULE_NAME[7]="atomisp-gc2235"
+BUILT_MODULE_NAME[7]="atomisp-mt9m114"
 BUILT_MODULE_LOCATION[7]="atomisp/$(echo $kernelver | sed 's/\([0-9]\+\.[0-9]\+\)\..*/\1/g')/drivers/staging/media/atomisp/i2c"
-BUILT_MODULE_NAME[8]="atomisp-libmsrlisthelper"
+BUILT_MODULE_NAME[8]="atomisp-ov2722"
 BUILT_MODULE_LOCATION[8]="atomisp/$(echo $kernelver | sed 's/\([0-9]\+\.[0-9]\+\)\..*/\1/g')/drivers/staging/media/atomisp/i2c"
-BUILT_MODULE_NAME[9]="atomisp-lm3554"
+BUILT_MODULE_NAME[9]="atomisp-libmsrlisthelper"
 BUILT_MODULE_LOCATION[9]="atomisp/$(echo $kernelver | sed 's/\([0-9]\+\.[0-9]\+\)\..*/\1/g')/drivers/staging/media/atomisp/i2c"
-BUILT_MODULE_NAME[10]="atomisp-mt9m114"
+BUILT_MODULE_NAME[10]="atomisp-gc2235"
 BUILT_MODULE_LOCATION[10]="atomisp/$(echo $kernelver | sed 's/\([0-9]\+\.[0-9]\+\)\..*/\1/g')/drivers/staging/media/atomisp/i2c"
-BUILT_MODULE_NAME[11]="atomisp-ov2722"
-BUILT_MODULE_LOCATION[11]="atomisp/$(echo $kernelver | sed 's/\([0-9]\+\.[0-9]\+\)\..*/\1/g')/drivers/staging/media/atomisp/i2c"
 AUTOINSTALL="yes"
 DEST_MODULE_LOCATION[0]="/extra"
 DEST_MODULE_LOCATION[1]="/extra"
@@ -46,4 +44,3 @@ DEST_MODULE_LOCATION[7]="/extra"
 DEST_MODULE_LOCATION[8]="/extra"
 DEST_MODULE_LOCATION[9]="/extra"
 DEST_MODULE_LOCATION[10]="/extra"
-DEST_MODULE_LOCATION[11]="/extra"
