--- a/debian/dkms.conf.in
+++ b/debian/dkms.conf.in
@@ -4,8 +4,12 @@ BUILT_MODULE_NAME="#DRIVER_NAME#"
 ## Macros are definded in Makefile for all drivers
 MAKE="make -C $kernel_source_dir M=$dkms_tree/$PACKAGE_NAME/$PACKAGE_VERSION/build"
 CLEAN="make clean"
-# Build only for Kernels >= 6.10. For the moment only 6.10.
-BUILD_EXCLUSIVE_KERNEL="^(6.10\.)"
+# To avoid missing sources for Atom ISP for a specific kernel version
+# I have to set MIN and MAX kernel version to build only.
+# This means the driver will not fail for Kernels that are not present in atomisp directory.
+# For the moment: 6.10 to 6.12 are present.
+BUILD_EXCLUSIVE_KERNEL_MIN="#MIN_VER#"
+BUILD_EXCLUSIVE_KERNEL_MAX="#MAX_VER#"
 # Build only for ia32 and x86_64/amd64
 BUILD_EXCLUSIVE_ARCH="^(ia32|i386|x86_64|amd64)"
 ## Intel ipu-bridge driver
