Added automatisation for autodetecting new drivers
* Automatisation for building necessary files and control file
for each driver present in atomisp subdirectory.

* It searches automatically the symbols and the name of the modules.

--- a/atomisp/6.10/drivers/Kconfig
+++ b/atomisp/6.10/drivers/Kconfig
@@ -2,7 +2,7 @@
 menu "Device Drivers"
 
 source "drivers/media/Kconfig"
-
 source "drivers/staging/Kconfig"
+source "drivers/platform/Kconfig"
 
 endmenu
