--- a/debian/atomisp-6.10-dkms.install.in
+++ b/debian/atomisp-6.10-dkms.install.in
@@ -1,5 +1,15 @@
-README.md		usr/src/#PKG_NAME#-#VERSION#/
-LICENSE			usr/src/#PKG_NAME#-#VERSION#/
-Makefile		usr/src/#PKG_NAME#-#VERSION#/
-debian/dkms.conf	usr/src/#PKG_NAME#-#VERSION#/
-atomisp/		usr/src/#PKG_NAME#-#VERSION#/
+#!/usr/bin/dh-exec --with=install
+README.md			usr/src/atomisp-6.10-#VERSION#/
+LICENSE				usr/src/atomisp-6.10-#VERSION#/
+Makefile			usr/src/atomisp-6.10-#VERSION#/
+atomisp/Kbuild			usr/src/atomisp-6.10-#VERSION#/atomisp/
+debian/dkms-6.10.conf => usr/src/atomisp-6.10-#VERSION#/dkms.conf
+Kbuild-CFLAGS-6.10.mk		usr/src/atomisp-6.10-#VERSION#/
+Symbols-6.10.mk			usr/src/atomisp-6.10-#VERSION#/
+atomisp/6.10/			usr/src/atomisp-6.10-#VERSION#/atomisp/
+Kbuild-CFLAGS-6.11.mk		usr/src/atomisp-6.10-#VERSION#/
+Symbols-6.11.mk			usr/src/atomisp-6.10-#VERSION#/
+atomisp/6.11/			usr/src/atomisp-6.10-#VERSION#/atomisp/
+Kbuild-CFLAGS-6.12.mk		usr/src/atomisp-6.10-#VERSION#/
+Symbols-6.12.mk			usr/src/atomisp-6.10-#VERSION#/
+atomisp/6.12/			usr/src/atomisp-6.10-#VERSION#/atomisp/
