--- a/debian/rules
+++ b/debian/rules
@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 
-DRIVER_NAME := atomisp-6.10
+DRIVER_NAME := atomisp
 VERSION := $(shell dpkg-parsechangelog | grep '^Version:' | cut -d' ' -f2 | cut -d- -f1 | cut -d\: -f2)
 PKG_NAME := atomisp-6.10
 PKG_kernel_src  := $(PKG_NAME)-dkms
@@ -20,19 +20,21 @@ override_dh_auto_clean:
 override_dh_auto_build:
 
 override_dh_auto_install:
+	./build-dkms
 	# just create .install files from templates.
-	for i in dkms.conf \
-		$(PKG_kernel_src).install \
-		$(PKG_kernel_src).postinst \
-		$(PKG_kernel_src).prerm; do \
-			sed \
-			-e "s|#PKG_NAME#|$(PKG_NAME)|" \
-			-e "s|#DRIVER_NAME#|$(DRIVER_NAME)|" \
-			-e "s|#VERSION#|$(VERSION)|" \
-			-e "s|#ARCH#|$(ARCH_SUFFIX)|" \
-			-e "s|#MIN_VER#|$(shell ls -1 atomisp | grep "^[0-9]\." | sort -V | head -1)|" \
-			-e "s|#MAX_VER#|$(shell ls -1 atomisp | grep "^[0-9]\." | sort -V | tail -1)|" \
-			debian/$$i.in > debian/$$i; \
+	for i in $(shell find debian \( -name "dkms-*.conf.in" -o -name "*.postinst.in" -o -name "*.postrm.in" -o -name "*.prerm.in" \) -printf "%f\n" ); do \
+		sed \
+		-e "s|#VERSION#|$(VERSION)|" \
+		-e "s|#ARCH#|$(ARCH_SUFFIX)|" \
+		debian/$$i > debian/$${i%.*}; \
+	done
+
+	for i in $(shell find debian -name "*.install.in" -printf "%f\n"); do \
+		sed \
+		-e "s|#VERSION#|$(VERSION)|" \
+		-e "s|#ARCH#|$(ARCH_SUFFIX)|" \
+		debian/$$i > debian/$${i%.*}; \
+		chmod +x debian/$${i%.*}; \
 	done
 
 override_dh_clean:
